# OpenBPS

./: .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  LICENSE  README.md  configure.xml  configureold.xml  outlog.csv
.github/workflows/: main.yml
docs/source/: conf.py  index.rst  install.rst  license.rst  reference.rst
docs/source/examples/: index.rst  neutron_fast_pulse.rst
docs/source/theory/: decay_equations.rst  index.rst
docs/source/userguide/: chain.rst  configuration.rst  cross_sections.rst  index.rst  materials.rst  output.rst  overview.rst  reactions.rst
docs/source/xml_inputs/: chain_xml.rst  configure_xml.rst  index.rst  material_xml.rst  nuclide_xml.rst  reactions_xml.rst  xslib_xml.rst
examples/: XMAS172.xml  chain_endfb71.xml  chain_jeff33.xml  nuclides.xml
examples/U235thn_1sec/: materialsi.xml  materialso.xml  materialso1.xml  reactions.xml  result.xml
include/openbps/: chain.h  configure.h  executer.h  filter.h  functionals.h  materials.h  matrix.h  nuclide.h  parse.h  reactions.h  timeproc.h  uncertainty.h
scripts/: prepro.py  scriptprepro.py
src/: chain.cpp  configure.cpp  executer.cpp  filter.cpp  functionals.cpp  main.cpp  materials.cpp  matrix.cpp  nuclide.cpp  parse.cpp  reactions.cpp
test/: test.cpp  test.sh
test/test_xml/: chain_simple.xml  configure.xml
